--- a/Charts.Logic/Charts.Logic.csproj
+++ b/Charts.Logic/Charts.Logic.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\Charts.Shared.Logic\Charts.Shared.Logic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\" />
+  </ItemGroup>
+
 </Project>
