--- a/Charts.Shared.Data/Charts.Shared.Data.csproj
+++ b/Charts.Shared.Data/Charts.Shared.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201126165131_AddExtraColumns.cs" />
+    <Compile Remove="Migrations\20201126165131_AddExtraColumns.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="6.0.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.0.1" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
