--- a/Charts.Shared.Logic/Charts.Shared.Logic.csproj
+++ b/Charts.Shared.Logic/Charts.Shared.Logic.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.11.3" />
     <PackageReference Include="InteropKalkanCryptCOMLib" Version="1.0.1" />
     <PackageReference Include="KazAgroCamunda.Api.Client" Version="2.5.3" />
+    <PackageReference Include="WorkflowCore" Version="3.3.2" />
   </ItemGroup>
 
   <ItemGroup>
